# Tutti

./: .gitignore  .gitmodules  BUILTIN_NODES.md  CHANGELOG.md  Cargo.toml  LICENSE-APACHE  README.md  TESTING.md
crates/tutti-analysis/: Cargo.toml  README.md
crates/tutti-analysis/src/: cache.rs  correlation.rs  handle.rs  lib.rs  live.rs  pitch.rs  transient.rs  waveform.rs
crates/tutti-automation/: Cargo.toml
crates/tutti-automation/src/: lane.rs  lib.rs
crates/tutti-burn/: Cargo.toml
crates/tutti-burn/src/: backend_pool.rs  dispatch.rs  fusion.rs  lib.rs
crates/tutti-core/: Cargo.toml  README.md
crates/tutti-core/src/: callback.rs  compat.rs  config.rs  error.rs  export_context.rs  lib.rs  lockfree.rs  macros.rs  metering.rs  midi.rs  midi_registry.rs  net_frontend.rs  output.rs  parameter.rs  registry.rs  smooth.rs  system.rs
crates/tutti-core/src/metering/: amplitude.rs  cpu.rs  handle.rs  loudness.rs  manager.rs  math.rs  mod.rs  rt.rs  stereo.rs
crates/tutti-core/src/midi/: input_source.rs  mod.rs  registry.rs  routing.rs  snapshot.rs  snapshot_reader.rs  source.rs  traits.rs
crates/tutti-core/src/neural/: graph_analyzer.rs  inference.rs  metadata.rs  mod.rs  traits.rs
crates/tutti-core/src/output/: core.rs  mod.rs
crates/tutti-core/src/pdc/: delay_buffer.rs  graph_compensator.rs  manager.rs  mod.rs  mono_delay.rs  unit.rs
crates/tutti-core/src/transport/: automation_reader.rs  click.rs  clock.rs  export_timeline.rs  fsm.rs  handle.rs  manager.rs  metronome.rs  mod.rs  position.rs  sync.rs  tempo_map.rs
crates/tutti-dsp/: Cargo.toml  README.md
crates/tutti-dsp/src/: dynamics.rs  envelope_follower.rs  error.rs  handles.rs  lfo.rs  lib.rs
crates/tutti-dsp/src/dynamics/: compressor.rs  gate.rs  mod.rs  stereo_compressor.rs  stereo_gate.rs  utils.rs
crates/tutti-dsp/src/spatial/: binaural_panner.rs  mod.rs  nodes.rs  types.rs  utils.rs  vbap_panner.rs
crates/tutti-export/: Cargo.toml  README.md
crates/tutti-export/examples/: sine_export.rs
crates/tutti-export/src/: butler_export.rs  error.rs  export_builder.rs  handle.rs  lib.rs  options.rs  renderer.rs  types.rs
crates/tutti-export/src/dsp/: dither.rs  loudness.rs  mod.rs  resample.rs
crates/tutti-export/src/format/: flac.rs  mod.rs  wav.rs
crates/tutti-midi/: Cargo.toml  README.md
crates/tutti-midi/src/: async_port.rs  cc_manager.rs  cc_mapping.rs  compat.rs  event.rs  input.rs  input_source.rs  lib.rs  midi2.rs  mpe.rs  multi_port.rs  note.rs  output.rs  output_collector.rs  serde_support.rs  system.rs  utils.rs
crates/tutti-neural/: Cargo.toml  README.md
crates/tutti-neural/src/: backend.rs  effect_node.rs  engine.rs  error.rs  handle.rs  lib.rs  model.rs  registry.rs  synth_node.rs  system.rs
crates/tutti-neural/src/backend/: mod.rs  pool.rs
crates/tutti-neural/src/effects/: effect_builder.rs  mod.rs  sync_builder.rs
crates/tutti-neural/src/gpu/: batch.rs  effect_queue.rs  engine.rs  fusion.rs  graph_batcher.rs  midi_state.rs  mod.rs  queue.rs  tutti_adapter.rs
crates/tutti-neural/src/synthesis/: mod.rs  model_trait.rs  neural_synth.rs  neural_synth_builder.rs  neural_synth_processor.rs  sync_builder.rs
crates/tutti-plugin/: Cargo.toml  README.md
crates/tutti-plugin-server/: Cargo.toml
crates/tutti-plugin-server/src/: clap_loader.rs  instance.rs  lib.rs  main.rs  server.rs  transport.rs  vst2_loader.rs  vst3_loader.rs
crates/tutti-plugin/examples/: clap_host.rs  vst2_host.rs  vst3_host.rs
crates/tutti-plugin/src/: bridge.rs  clap.rs  clap_loader.rs  client.rs  error.rs  handle.rs  inprocess_bridge.rs  instance.rs  lib.rs  lockfree_bridge.rs  metadata.rs  protocol.rs  registry.rs  server.rs  shared_memory.rs  transport.rs  vst2_loader.rs  vst3_loader.rs
crates/tutti-sampler/: Cargo.toml  README.md  TESTING_PLAN.md
crates/tutti-sampler/src/: auditioner.rs  error.rs  handle.rs  import.rs  lib.rs  stream_builder.rs  system.rs
crates/tutti-sampler/src/audio_input/: manager.rs  mod.rs  node.rs
crates/tutti-sampler/src/butler/: cache.rs  capture.rs  config.rs  crossfade.rs  loops.rs  metrics.rs  mod.rs  pdc.rs  prefetch.rs  refill.rs  request.rs  shared_state.rs  stream_state.rs  thread.rs  transport.rs  varispeed.rs
crates/tutti-sampler/src/recording/: automation_lane.rs  automation_manager.rs  automation_target.rs  config.rs  events.rs  manager.rs  mod.rs  session.rs
crates/tutti-sampler/src/sampler/: mod.rs  node.rs
crates/tutti-sampler/src/soundfont/: fundsp_adapter.rs  manager.rs  mod.rs
crates/tutti-sampler/src/time_stretch/: granular.rs  mod.rs  phase_vocoder.rs  types.rs  unit.rs
crates/tutti-synth/: Cargo.toml
crates/tutti-synth/src/: error.rs  handle.rs  lib.rs  modulation.rs  polysynth.rs  portamento.rs  tuning.rs  unison.rs  voice.rs
crates/tutti-synth/src/builder/: mod.rs  polysynth.rs  voice.rs
crates/tutti-synth/src/soundfont/: manager.rs  mod.rs  synthesizer.rs  unit.rs
examples/: 01_hello_sine.rs  02_multi_track.rs  03_transport_control.rs  04_sequencer.rs  05_effect_chain.rs  06_live_coding.rs  07_node_registry.rs  08_load_audio.rs  09_midi_synth.rs  09_streaming.rs  10_export.rs  10_midi_routing.rs  11_recording.rs  11_soundfont.rs  12_automation.rs  12_metering.rs  13_export.rs  13_metering.rs  14_midi_synth.rs  14_streaming.rs  15_midi_routing.rs  15_recording.rs  16_soundfont.rs  16_spatial_audio.rs  17_midi_hardware.rs  17_plugin_loading.rs  18_mpe.rs  19_midi2.rs  19_neural_models.rs  20_dynamics.rs  20_neural_workflow.rs  21_load_audio.rs  21_spatial_audio.rs  22_plugin_editor.rs  22_plugin_loading.rs  23_plugin_editor.rs  24_neural_closure.rs  25_neural_models.rs  26_neural_workflow.rs  effect_chain.rs  (+15 more)
src/: builder.rs  builders.rs  engine.rs  error.rs  lib.rs
tests/: analysis_integration.rs  audio_output_tests.rs  deterministic_signal_tests.rs  dsp_api_test.rs  export_integration.rs  integration_tests.rs  metering_audio_tests.rs  midi_audio_tests.rs  midi_integration.rs  reference_comparison_tests.rs  sampler_integration.rs  silence_detection_tests.rs  soundfont_api_test.rs  soundfont_tests.rs  (+1 more)
(+59 files in other folders)
