[workspace]
members = [
    "crates/tutti-core",
    "crates/tutti-midi-io",
    "crates/tutti-sampler",
    "crates/tutti-synth",
    "crates/tutti-dsp",
    "crates/tutti-plugin",
    "crates/tutti-plugin-server",
    "crates/tutti-neural",
    "crates/tutti-burn",
    "crates/tutti-analysis",
    "crates/tutti-export",
    "crates/tutti-automation",
    "crates/audio-automation",
    "crates/fundsp-tutti",
    "crates/rustysynth-tutti/rustysynth",
    "crates/tutti-midi",
    "crates/vst3-host",
    "crates/clap-host",
]
resolver = "2"

[package]
name = "tutti"
version = "0.0.1"
edition = "2021"
description = "Real-time audio engine - umbrella crate coordinating modular audio subsystems"
license = "MIT OR Apache-2.0"
repository = "https://github.com/PoHsuanLai/Tutti"
keywords = ["audio", "dsp", "midi", "synthesis", "real-time"]
categories = ["multimedia::audio", "multimedia"]
exclude = [
    "assets/models/*.onnx",
    "assets/models/*.onnx.data",
    "assets/plugins/*",
    "assets/soundfonts/*.sf2",
    "assets/soundfonts/*.sf3",
    ".github/",
    "TESTING.md",
]

[features]
# Default: Full feature set for backwards compatibility
# Note: Enables std for audio I/O (CPAL) - use default-features = false for no_std
default = ["full", "std"]

# Enable std on tutti-core (needed for CPAL audio I/O and neural processing)
std = ["tutti-core/std"]

# === Audio Format Features ===
# Each format only pulls in its specific codec
wav = ["tutti-core/wav"]      # WAV/PCM - the standard
flac = ["tutti-core/flac"]    # FLAC - lossless
mp3 = ["tutti-core/mp3"]      # MP3 - legacy compatibility
ogg = ["tutti-core/ogg"]      # OGG/Vorbis - open compressed

# All audio formats (convenience)
files = ["wav", "flac", "mp3", "ogg"]

# Full feature set (everything except plugin formats — those are opt-in via clap/vst3/vst2)
# Plugin hosting requires explicit format selection: --features clap, --features vst3, etc.
full = [
    "files",
    "midi", "midi-io", "mpe", "midi2",
    "synth", "soundfont",
    "neural", "burn",
    "sampler",
    "export", "analysis",
    "automation",
    "dsp-full"
]

# All plugin formats (convenience)
all-plugins = ["clap", "vst3", "vst2"]

# === DSP Features ===
dsp-dynamics = ["tutti-dsp/dynamics"]  # Compressors, gates
dsp-spatial = ["tutti-dsp/spatial"]    # VBAP, binaural (adds vbap crate)
dsp-full = ["dsp-dynamics", "dsp-spatial"]

# === MIDI Features ===
# Note: When neural is also enabled, tutti-neural/midi is activated automatically
midi = ["dep:tutti-midi-io", "tutti-core/midi", "tutti-neural?/midi"]
midi-io = ["midi", "tutti-midi-io/midi-io"]  # Hardware MIDI I/O
mpe = ["midi", "tutti-midi-io/mpe"]          # MPE support
midi2 = ["midi", "tutti-midi-io/midi2"]      # MIDI 2.0

# === Synth Features ===
synth = ["dep:tutti-synth"]
# Note: soundfont enables tutti-synth/midi via soundfont feature (which depends on midi)
soundfont = ["synth", "tutti-synth/soundfont"]

# === Plugin Hosting ===
# plugin enables the plugin infrastructure; pick at least one format (clap, vst3, vst2)
plugin = ["dep:tutti-plugin", "dep:tutti-plugin-server"]
clap = ["plugin", "tutti-plugin-server/clap"]     # CLAP support
vst3 = ["plugin", "tutti-plugin-server/vst3"]     # VST3 support
vst2 = ["plugin", "tutti-plugin-server/vst2"]     # VST2 support (requires VST SDK)

# === Neural Audio ===
# Neural orchestration (no ML framework — BYO backend via InferenceBackend trait)
# When both neural and midi are enabled, tutti-neural gets midi support for synths
neural = ["std", "dep:tutti-neural", "tutti-core/neural"]
# Burn ML backend (adds burn + wgpu; implies neural)
burn = ["neural", "dep:tutti-burn"]

# === Sampler Features ===
# Note: sampler enables wav by default via tutti-sampler
sampler = ["dep:tutti-sampler"]
sampler-wav = ["sampler", "tutti-sampler/wav"]
sampler-flac = ["sampler", "tutti-sampler/flac"]
sampler-mp3 = ["sampler", "tutti-sampler/mp3"]
sampler-ogg = ["sampler", "tutti-sampler/ogg"]
sampler-files = ["sampler", "tutti-sampler/files"]

# === Export & Analysis ===
export = ["dep:tutti-export"]
analysis = ["dep:tutti-analysis"]

# === Automation ===
automation = ["dep:tutti-automation"]

[dependencies]
# Core (always included - minimal DSP)
# Note: default-features = false means no_std by default, features enable std when needed
tutti-core = { version = "0.0.1", path = "crates/tutti-core", default-features = false }
tutti-dsp = { version = "0.0.1", path = "crates/tutti-dsp", default-features = false }

# Optional subsystems
tutti-sampler = { version = "0.0.1", path = "crates/tutti-sampler", optional = true, default-features = false }
tutti-analysis = { version = "0.0.1", path = "crates/tutti-analysis", optional = true }
tutti-export = { version = "0.0.1", path = "crates/tutti-export", optional = true }
tutti-midi-io = { version = "0.0.1", path = "crates/tutti-midi-io", optional = true, default-features = false }
tutti-synth = { version = "0.0.1", path = "crates/tutti-synth", optional = true, default-features = false }
tutti-plugin = { version = "0.0.1", path = "crates/tutti-plugin", optional = true }
tutti-plugin-server = { version = "0.0.1", path = "crates/tutti-plugin-server", optional = true, default-features = false }
tutti-neural = { version = "0.0.1", path = "crates/tutti-neural", optional = true }
tutti-burn = { version = "0.0.1", path = "crates/tutti-burn", optional = true }
tutti-automation = { version = "0.0.1", path = "crates/tutti-automation", optional = true }


[dev-dependencies]
approx = "0.5"
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros"] }
hound = "3.5"  # WAV file I/O for test reference files
winit = "0.30"
raw-window-handle = "0.6"
clap-host = { path = "crates/clap-host" }
vst3-host = { path = "crates/vst3-host" }

# Example-specific feature requirements
[[example]]
name = "09_midi_synth"
required-features = ["midi", "synth"]

[[example]]
name = "11_soundfont"
required-features = ["soundfont"]

[[example]]
name = "13_export"
required-features = ["export"]

[[example]]
name = "14_streaming"
required-features = ["sampler"]

[[example]]
name = "15_recording"
required-features = ["sampler", "export"]

[[example]]
name = "17_plugin_loading"
required-features = ["plugin", "vst3"]

[[example]]
name = "18_neural_closure"
required-features = ["neural", "burn", "midi"]

[[example]]
name = "19_neural_models"
required-features = ["neural", "burn"]

[[example]]
name = "20_neural_workflow"
required-features = ["neural", "burn"]

[[example]]
name = "21_load_audio"
required-features = ["sampler", "wav"]

[[example]]
name = "22_plugin_editor"
required-features = ["plugin", "midi"]
