[package]
name = "tutti-core"
version = "0.0.1"
edition = "2021"
description = "Core audio graph runtime kernel - Net/Graph, Transport, Metering, CPAL output"
license = "MIT OR Apache-2.0"
repository = "https://github.com/PoHsuanLai/Tutti"
keywords = ["audio", "dsp", "real-time", "daw", "fundsp"]
categories = ["multimedia::audio"]

[features]
# Default: Enable audio I/O via CPAL (requires std)
default = ["std"]

# std feature: Only needed for CPAL audio I/O
# Everything else works with no_std + alloc
std = ["fundsp/std", "dep:cpal", "tutti-midi?/std"]

# Individual audio format support (each pulls only its codec)
wav = ["std", "fundsp/wav"]
flac = ["std", "fundsp/flac"]
mp3 = ["std", "fundsp/mp3"]
ogg = ["std", "fundsp/ogg"]

# All file formats
files = ["wav", "flac", "mp3", "ogg"]

# Optional subsystems
neural = []
midi = ["dep:tutti-midi"]

[dependencies]
thiserror = "2"
dyn-clone = "1.0"
serde = { version = "1", features = ["derive"] }

# Audio
cpal = { version = "0.15", optional = true }
fundsp = { package = "fundsp-tutti", version = "0.23.0", path = "../fundsp-tutti", default-features = false }

# MIDI types (pure types from tutti-midi)
tutti-midi = { version = "0.0.1", path = "../tutti-midi", default-features = false, optional = true }

# Lock-free (no_std compatible)
ringbuf = "0.4"
crossbeam-channel = "0.5"
atomic_float = "1.1"
arc-swap = "1.7"
dashmap = "6.1"
hashbrown = { version = "0.16", default-features = false }
parking_lot = { version = "0.12", default-features = false }

# DSP (for future LUFS metering implementation)
ebur128 = "0.1"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
proptest = "1.9.0"
insta = { version = "1.41", features = ["yaml"] }
approx = "0.5"
tempfile = "3.8"
rand = "0.8"
