[package]
name = "tutti-dsp"
version = "0.0.1"
edition = "2021"
description = "Real-time DSP building blocks for Tutti audio engine - LFO, envelope followers, dynamics, spatial audio"
license = "MIT OR Apache-2.0"
repository = "https://github.com/PoHsuanLai/Tutti"

[dependencies]
# AudioUnit trait and DSP primitives from tutti-core
tutti-core = { path = "../tutti-core", default-features = false }

# Spatial audio VBAP library (always included)
vbap = "0.1"

# Error handling
thiserror = "2"

# Serialization (optional)
serde = { version = "1", features = ["derive"], optional = true }

[dev-dependencies]
approx = "0.5"

[features]
default = []
serialization = ["serde"]
