[package]
name = "tutti-export"
version = "0.0.1"
edition = "2021"
description = "Offline audio export and rendering for Tutti audio engine"
license = "MIT OR Apache-2.0"
repository = "https://github.com/PoHsuanLai/Tutti"
keywords = ["audio", "export", "render", "wav", "flac"]
categories = ["multimedia::audio"]

[features]
default = ["wav", "flac"]
wav = ["hound"]
flac = ["flacenc"]

[dependencies]
thiserror = "1.0"
tutti-core = { path = "../tutti-core", default-features = false }
rubato = "0.16"
hound = { version = "3.5", optional = true }
flacenc = { version = "0.4", optional = true }
crossbeam-channel = "0.5"

[dev-dependencies]
tempfile = "3.10"
approx = "0.5"
fundsp = { package = "fundsp-tutti", path = "../fundsp-tutti", default-features = false, features = ["std"] }
