[package]
name = "tutti-neural"
version = "0.1.0"
edition = "2021"
description = "Neural audio synthesis and effects for Tutti - DDSP, vocoders, amp sims"
license = "MIT OR Apache-2.0"
repository = "https://github.com/PoHsuanLai/tutti"
keywords = ["audio", "neural", "neural-synth", "synthesis", "machine-learning"]
categories = ["multimedia::audio"]

[dependencies]
# Tutti core (neural traits and infrastructure)
tutti-core = { path = "../tutti-core", default-features = false, features = ["neural", "midi"] }

# MIDI support (Phase 2)
tutti-midi = { path = "../tutti-midi" }
midi-msg = { version = "0.8", default-features = false }

# ML/GPU framework
burn = { git = "https://github.com/tracel-ai/burn", default-features = false, features = ["wgpu", "ndarray", "fusion", "autodiff", "std"] }
burn-import = { git = "https://github.com/tracel-ai/burn", default-features = false, features = ["safetensors"], optional = true }
wgpu = "26"  # Match Bevy 0.17's wgpu version

# Lock-free data structures
crossbeam-channel = "0.5.15"
dashmap = "6.1"
thingbuf = "0.1"

# Utilities
tracing = "0.1"
thiserror = "2"
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
parking_lot = "0.12"
pollster = "0.3"
uuid = { version = "1.0", features = ["v4"] }

[features]
default = []
safetensors = ["dep:burn-import"]
