[package]
name = "tutti-neural"
version = "0.0.1"
edition = "2021"
description = "Neural audio synthesis and effects for Tutti - DDSP, vocoders, amp sims"
license = "MIT OR Apache-2.0"
repository = "https://github.com/PoHsuanLai/Tutti"
keywords = ["audio", "neural", "neural-synth", "synthesis", "machine-learning"]
categories = ["multimedia::audio"]

[dependencies]
# Tutti core (neural traits and infrastructure)
tutti-core = { path = "../tutti-core", default-features = false, features = ["neural"] }

# MIDI support (optional)
midi-msg = { version = "0.8", default-features = false, optional = true }

# Lock-free channels
crossbeam-channel = "0.5.15"

# Utilities
tracing = "0.1"
thiserror = "2"

[features]
default = []

# MIDI support for neural synths
midi = ["tutti-core/midi", "dep:midi-msg"]
