[package]
name = "tutti-plugin"
version = "0.0.1"
edition = "2021"
description = "Multi-process plugin hosting for Tutti - VST2, VST3, CLAP with crash isolation"
license = "MIT OR Apache-2.0"
repository = "https://github.com/PoHsuanLai/Tutti"

# Bridge server binary (separate process)
[[bin]]
name = "plugin-server"
path = "bin/plugin-bridge.rs"

[features]
# Default: Enable CLAP and hardware MIDI I/O
default = ["clap", "midi-io"]

# VST2 support (requires VST SDK)
vst2 = ["dep:vst"]

# VST3 support
vst3 = []

# CLAP support
clap = ["dep:clap-sys"]

# Hardware MIDI I/O support
midi-io = ["tutti-midi-io/midi-io"]

# All plugin formats
all = ["vst2", "vst3", "clap"]

[dependencies]
# Core types (for MidiAudioUnit trait)
tutti-core = { path = "../tutti-core", features = ["midi"] }

# MIDI support
tutti-midi-io = { path = "../tutti-midi-io", features = ["midi-io"] }

# Serialization for IPC
serde = { version = "1", features = ["derive"] }
bincode = "1"

# Shared memory
memmap2 = "0.9"

# Lock-free channels and queues
arc-swap = "1"
crossbeam-channel = "0.5"
crossbeam = "0.8"
parking_lot = "0.12"
ringbuf = "0.4"

# Stack-first vectors for MIDI events (zero-alloc for typical case)
smallvec = { version = "1.13", features = ["serde"] }

# Async runtime for IPC
tokio = { version = "1", features = ["net", "io-util", "sync", "rt", "rt-multi-thread", "macros", "time"] }

# Error handling
thiserror = "2"

# Logging
tracing = "0.1"

# VST2 plugin loading (optional)
vst = { version = "0.3", optional = true }

# CLAP plugin loading (optional)
clap-sys = { version = "0.5", optional = true }

libloading = "0.8"

# Platform-specific (shared memory)
[target.'cfg(unix)'.dependencies]

[target.'cfg(windows)'.dependencies]
windows = { version = "0.52", features = [
    "Win32_System_Memory",
    "Win32_System_Threading",
    "Win32_Foundation",
] }

[dev-dependencies]
tempfile = "3"
criterion = { version = "0.5", features = ["html_reports"] }
serde_json = "1"

# Only needed for the binary
[target.'cfg(not(target_env = "test"))'.dependencies]
tracing-subscriber = "0.3"
