[package]
name = "tutti-plugin"
version = "0.0.1"
edition = "2021"
description = "Multi-process plugin hosting client for Tutti - loads VST2, VST3, CLAP plugins in isolated processes"
license = "MIT OR Apache-2.0"
repository = "https://github.com/PoHsuanLai/Tutti"

[features]
default = ["midi-io"]

# Hardware MIDI I/O support
midi-io = ["tutti-midi-io/midi-io"]

[dependencies]
# Core types (for AudioUnit trait)
tutti-core = { path = "../tutti-core", features = ["midi"] }

# MIDI support
tutti-midi-io = { path = "../tutti-midi-io", features = ["midi-io"] }

# Serialization for IPC
serde = { version = "1", features = ["derive"] }
bincode = "1"

# Shared memory
memmap2 = "0.9"

# Lock-free channels and queues
arc-swap = "1"
crossbeam-channel = "0.5"
crossbeam = "0.8"
parking_lot = "0.12"
ringbuf = "0.4"

# Stack-first vectors for MIDI events (zero-alloc for typical case)
smallvec = { version = "1.13", features = ["serde"] }

# Async runtime for IPC
tokio = { version = "1", features = ["net", "io-util", "sync", "rt", "rt-multi-thread", "macros", "time"] }

# Error handling
thiserror = "2"

# Logging
tracing = "0.1"

# Platform-specific (shared memory)
[target.'cfg(unix)'.dependencies]

[target.'cfg(windows)'.dependencies]
windows = { version = "0.52", features = [
    "Win32_System_Memory",
    "Win32_System_Threading",
    "Win32_Foundation",
] }

[dev-dependencies]
tempfile = "3"
serde_json = "1"
