[package]
name = "tutti-sampler"
version = "0.1.0"
edition = "2021"
description = "Sampler, Butler thread, Recording, Audio input, Time stretch"
license = "MIT OR Apache-2.0"
repository = "https://github.com/PoHsuanLai/tutti"

[features]
default = []
soundfont = ["dep:rustysynth"]

[dependencies]
tutti-core = { path = "../tutti-core" }

thiserror = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Audio
cpal = "0.15"
audio-automation = { git = "https://github.com/PoHsuanLai/audio-automation.git" }

# Lock-free
ringbuf = "0.4"
crossbeam-channel = "0.5"
dashmap = "6.1"
atomic_float = "1.1"
arc-swap = "1.7"
parking_lot = "0.12"
smallvec = "1.13"

# DSP / Files
hound = "3.5"

# Optional
rustysynth = { git = "https://github.com/PoHsuanLai/rustysynth.git", optional = true }

[dev-dependencies]
tracing-subscriber = "0.3"
insta = { version = "1.41", features = ["yaml"] }
approx = "0.5"
tempfile = "3.8"
rand = "0.8"
